# insights_sidebar

./: .gitignore  README.md  license.txt  pyproject.toml
demo/: README.md  build_dashboard.py  run_demo.py  showcase_backend.py  verify_insights_sidebar.py
insights_sidebar/: api.py  boot.py  hooks.py  workspace_sync.py
insights_sidebar/insights_sidebar/doctype/insights_sidebar_config/: insights_sidebar_config.js  insights_sidebar_config.json  insights_sidebar_config.py
insights_sidebar/insights_sidebar/page/insights_viewer/: insights_viewer.js  insights_viewer.json
insights_sidebar/public/css/: insights_sidebar.css
insights_sidebar/public/js/: insights_sidebar.js
