[project]
name = "insights_sidebar"
authors = [
    { name = "Naveenkumar Hulimani", email = "naveenkumarh1998@gmail.com" }
]
description = "Dynamically inject role-based Insights dashboards into the Frappe Desk sidebar, rendered in-place via an iframe."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
